Paths and GitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+2022/12-1/Numbers.txt
+2022/12-2/Input.csv
+2022/12-3/Data.csv
+2022/12-3/Data.txt
+2022/12-4/CleaningPairs.csv
+2022/12-5/Moves.csv
+2022/12-5/Stacks.txt
+2022/12-6/Data.txt
+2022/12-7/FileSystem.txt
+2022/12-8/Trees.txt
+2022/12-9/Rope.txt
+2022/12-10/Instructions.txt
+2022/12-11/Monkeys.txt
+2022/12-12/Map.txt
+2022/12-13/Input.txt
+2022/12-14/Cave.txt
+2022/12-15/Coordinates.txt
+2022/12-16/Input.txt
+2023/12-1/Data.txt
+2023/12-2/Data.txt
+2023/12-3/Data.txt
+2023/12-4/Data.txt
+2023/12-5/Data.txt
 2024/12-1/Data.csv
 2024/12-2/Reports.txt
 2024/12-3/Memory.txt
